# BD_work

./: README.md  pom.xml
BDFront/: pom.xml
server/BD_server/: .env  Cargo.toml  diesel.toml
server/BD_server/migrations/10_constr_attr/: down.sql  up.sql
server/BD_server/migrations/11_eng_attr/: down.sql  up.sql
server/BD_server/migrations/12_lab_attr/: down.sql  up.sql
server/BD_server/migrations/13_mech_attr/: down.sql  up.sql
server/BD_server/migrations/14_equipment/: down.sql  up.sql
server/BD_server/migrations/15_groups_bind/: down.sql  up.sql
server/BD_server/migrations/16_working_company/: down.sql  up.sql
server/BD_server/migrations/17_department_head/: down.sql  up.sql
server/BD_server/migrations/18_eq_group/: down.sql  up.sql
server/BD_server/migrations/19_groups/: down.sql  up.sql
server/BD_server/migrations/1_company/: down.sql  up.sql
server/BD_server/migrations/20_pc_bind/: down.sql  up.sql
server/BD_server/migrations/2_worker_types/: down.sql  up.sql
server/BD_server/migrations/3_department/: down.sql  up.sql
server/BD_server/migrations/4_group_types/: down.sql  up.sql
server/BD_server/migrations/5_contract/: down.sql  up.sql
server/BD_server/migrations/6_eq_group_list/: down.sql  up.sql
server/BD_server/migrations/7_equipment_type/: down.sql  up.sql
server/BD_server/migrations/8_project/: down.sql  up.sql
server/BD_server/migrations/9_worker/: down.sql  up.sql
server/BD_server/src/: containers.rs  form_structs.rs  lib.rs  main.rs  models.rs  pagination.rs  pagination_impl.rs  schema.rs  tables_interaction.rs
(+63 files in other folders)
