[package]
name = "BD_work"
version = "0.1.0"
authors = ["bearhug15 <iartem2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "chrono", "serde_json"]}
dotenv = "0.15.0"
chrono = {version = "0.4", features =["serde"]}
string-builder = "0.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
unstringify ="0.1.1"
bigdecimal ="0.2.0"